--- a/inbox/src/main/resources/templates/login.html
+++ b/inbox/src/main/resources/templates/login.html
@@ -46,6 +46,7 @@
 		<button class="btn btn-primary"
 				type="submit">Sign in</button>
 	</form>
+	<a th:href="@{/oauth2/authorization/keycloak}">SSO</a>
 </div>
 </body>
 </html>
